--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>contact</ion-title>
+    <ion-title>Contact</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <img src="../assets/App_Resources/iOS/TIG3.png">
 </ion-content>
