--- a/src/app/restaurants/restaurants.page.html
+++ b/src/app/restaurants/restaurants.page.html
@@ -4,6 +4,14 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content padding>
+  <ion-list>
+    <ion-item ion-item *ngFor="let restaurant of restaurantsList" (click)="onLoadRestaurant(restaurant)">
+      <button>
+        <ion-label>
+          {{ restaurant.name }}
+        </ion-label>
+      </button>
+    </ion-item>
+  </ion-list>
 </ion-content>
