--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -12,9 +12,9 @@
   <p>Produits selon la saison, Livraisons sur Paris</p>
   <p>06.63.99.99.78</p>
 
-  <button ion-button (click)="onGoToProd_Prom()">Produits et promotions</button>
-  <button ion-button (click)="onGoToBateaux()">Bateaux</button>
-  <button ion-button (click)="onGoToRestaurants()">Restaurants</button>
-  <button ion-button (click)="onGoToRecettes()">Recettes</button>
-  <button ion-button (click)="onGoToContact()">Contact</button>
+  <ion-button (click)="onGoToProd_Prom()">Produits et promotions</ion-button>
+  <ion-button (click)="onGoToBateaux()">Bateaux</ion-button>
+  <ion-button (click)="onGoToRestaurants()">Restaurants</ion-button>
+  <ion-button (click)="onGoToRecettes()">Recettes</ion-button>
+  <ion-button (click)="onGoToContact()">Contact</ion-button>
 </ion-content>
