--- a/src/app/single-bateau/single-bateau.page.html
+++ b/src/app/single-bateau/single-bateau.page.html
@@ -8,7 +8,7 @@
   <ion-card>
     <ion-card-header>{{ bateau.name }}</ion-card-header>
     <ion-card-content>
-      <p *ngFor="let line of bateau.description">{{ line }}</p>
+      <p>{{bateau.owner}}</p>
     </ion-card-content>
     <ion-grid>
       <ion-row>
