--- a/src/app/prod-prom/prod-prom.page.html
+++ b/src/app/prod-prom/prod-prom.page.html
@@ -4,6 +4,14 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content padding>
+  <ion-list>
+    <ion-item *ngFor="let produit of produitsList" (click)="onLoadProduit(produit)">
+      <ion-button>
+        <ion-label>
+          {{ produit.name }}
+        </ion-label>
+      </ion-button>
+    </ion-item>
+  </ion-list>
 </ion-content>
