--- a/src/app/recettes/recettes.page.html
+++ b/src/app/recettes/recettes.page.html
@@ -4,6 +4,14 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content padding>
+  <ion-list>
+    <ion-item *ngFor="let recette of recettesList" (click)="onLoadRecette(recette)">
+      <ion-button>
+        <ion-label>
+          {{ recette.name }}
+        </ion-label>
+      </ion-button>
+    </ion-item>
+  </ion-list>
 </ion-content>
