--- a/src/app/single-recette/single-recette.page.html
+++ b/src/app/single-recette/single-recette.page.html
@@ -1,14 +1,14 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{ restaurant.name }}</ion-title>
+    <ion-title>{{ recette.name }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
   <ion-card>
-    <ion-card-header>{{ restaurant.name }}</ion-card-header>
+    <ion-card-header>{{ recette.name }}</ion-card-header>
     <ion-card-content>
-      <p>{{ restaurant.comments }}</p>
+      <p>{{recette.comments}}</p>
     </ion-card-content>
     <ion-grid>
       <ion-row>
