--- a/src/app/prod-prom/prod-prom.page.html
+++ b/src/app/prod-prom/prod-prom.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
     <ion-title>Produits et Promotions</ion-title>
   </ion-toolbar>
 </ion-header>
