Ajout d'un bouton Retour sur chaque page v3

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
+    <ion-title class="title_page">
       Bateau Thibault
     </ion-title>
   </ion-toolbar>
