--- a/src/app/prod-prom/prod-prom.page.html
+++ b/src/app/prod-prom/prod-prom.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>Produits et Promotions</ion-title>
+    <ion-title class="title_page">Produits et Promotions</ion-title>
   </ion-toolbar>
 </ion-header>
 
