--- a/src/app/single-produit/single-produit.page.html
+++ b/src/app/single-produit/single-produit.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>{{ produit.name }}</ion-title>
+    <ion-title class="title_page">{{ produit.name }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
