--- a/src/app/recettes/recettes.page.html
+++ b/src/app/recettes/recettes.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>Nos Recette</ion-title>
+    <ion-title class="title_page">Nos Recettes</ion-title>
   </ion-toolbar>
 </ion-header>
 
