--- a/src/app/single-restaurant/single-restaurant.page.html
+++ b/src/app/single-restaurant/single-restaurant.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>{{ restaurant.name }}</ion-title>
+    <ion-title class="title_page">{{ restaurant.name }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
