--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -11,6 +11,11 @@
   --ion-color-primary-shade: #3171e0;
   --ion-color-primary-tint: #4c8dff;
 
+  .title_page{
+    text-align: center;
+  }
+
+
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
   --ion-color-secondary-rgb: 61, 194, 255;
