Ajout d'un bouton Fb dans contact

--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -9,4 +9,6 @@
 
 <ion-content>
   <img src="../assets/App_Resources/iOS/TIG3.png">
+
+  <button type="button" (click)="goToFb('https://www.facebook.com/lebateaudethibault')"><ion-icon name="logo-facebook" ></ion-icon></button>
 </ion-content>
