--- a/src/app/recettes/recettes.page.html
+++ b/src/app/recettes/recettes.page.html
@@ -14,6 +14,7 @@
   <p>www.facebook.com/lebateauthibault</p>
   <ion-list>
     <ion-item *ngFor="let recette of recettesList" (click)="onLoadRecette(recette)">
+      <img [src]="recette.icon">
       <ion-button>
         <ion-label>
           {{ recette.name }}
