icon plus jolies avec ionavatar

--- a/src/app/bateaux/bateaux.page.html
+++ b/src/app/bateaux/bateaux.page.html
@@ -15,7 +15,9 @@
   <p>www.facebook.com/lebateauthibault</p>
   <ion-list>
     <ion-item *ngFor="let bateau of bateauxList" (click)="onLoadBateau(bateau)">
-      <img [src]="bateau.icon">
+      <ion-avatar>
+        <img [src]="bateau.icon">
+      </ion-avatar>
       <ion-button>
         <ion-label>
           {{ bateau.name }}
