--- a/src/app/recettes/recettes.page.html
+++ b/src/app/recettes/recettes.page.html
@@ -14,7 +14,9 @@
   <p>www.facebook.com/lebateauthibault</p>
   <ion-list>
     <ion-item *ngFor="let recette of recettesList" (click)="onLoadRecette(recette)">
-      <img [src]="recette.icon">
+      <ion-avatar>
+        <img [src]="recette.icon">
+      </ion-avatar>
       <ion-button>
         <ion-label>
           {{ recette.name }}
