--- a/src/app/crustaces/crustaces.page.html
+++ b/src/app/crustaces/crustaces.page.html
@@ -12,6 +12,9 @@
       <ion-label>
         {{produit.name}}
       </ion-label>
+      <ion-label slot="end">
+        {{produit.price}} €
+      </ion-label>
       </ion-item>
     </ng-container>
       
