debut du panier

--- a/src/app/coquillages/coquillages.page.html
+++ b/src/app/coquillages/coquillages.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>coquillages</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Coquillages</ion-title>
   </ion-toolbar>
 </ion-header>
 
