--- a/src/app/promotion/promotion.page.html
+++ b/src/app/promotion/promotion.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>promotion</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Promotion</ion-title>
   </ion-toolbar>
 </ion-header>
 
