--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -8,7 +8,15 @@
 </ion-header>
 
 <ion-content>
-  <img src="../assets/App_Resources/iOS/TIG3.png">
-
-  <button type="button" (click)="goToFb('https://www.facebook.com/lebateaudethibault')"><ion-icon name="logo-facebook" ></ion-icon></button>
+  <ion-grid>
+    <ion-row>
+      <img src="../assets/App_Resources/iOS/TIG3.png">
+    </ion-row>
+    <ion-row>
+      <button type="button" (click)="goToFb('https://www.facebook.com/lebateaudethibault')"><ion-icon name="logo-facebook" ></ion-icon></button>
+    </ion-row>
+  </ion-grid>
+  
+  
+  
 </ion-content>
