--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,14 +7,45 @@
 </ion-header>
 
 <ion-content>
-  <h1>Le bateau de Thibault</h1>
-  <p>Vente en direct de notre bateau </p>
-  <p>Produits selon la saison, Livraisons sur Paris</p>
-  <p>06.63.99.99.78</p>
-
-  <ion-button (click)="onGoToProd_Prom()">Produits et promotions</ion-button>
-  <ion-button (click)="onGoToBateaux()">Bateaux</ion-button>
-  <ion-button (click)="onGoToRestaurants()">Restaurants</ion-button>
-  <ion-button (click)="onGoToRecettes()">Recettes</ion-button>
-  <ion-button (click)="onGoToContact()">Contact</ion-button>
+  <ion-grid>
+    <ion-row>
+      <h1>Le bateau de Thibault</h1>
+    </ion-row>
+    <ion-row>
+      <p>Vente en direct de notre bateau </p>
+    </ion-row>
+    <ion-row>
+      <p>Produits selon la saison, Livraisons sur Paris</p>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-button  (click)="onGoToProd_Prom()">Produits et promotions</ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button (click)="onGoToBateaux()">Bateaux</ion-button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-button (click)="onGoToRestaurants()">Restaurants</ion-button>
+      </ion-col>
+      <ion-col>
+        <ion-button (click)="onGoToRecettes()">Recettes</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+    <ion-row>
+      <ion-col (click)="onGoToContact()">
+        <ion-icon name="reader-outline"></ion-icon>
+        <ion-text>  Contact</ion-text>
+      </ion-col>
+      <ion-col class="goRight">
+        <ion-icon name="call-outline"> </ion-icon>
+        <ion-text> 06 63 99 99 78</ion-text>
+      </ion-col>
+    </ion-row>
+  </ion-toolbar>
+</ion-footer>
