panier amélioré, le remove réduit la liste

--- a/src/app/prod-prom/prod-prom.page.html
+++ b/src/app/prod-prom/prod-prom.page.html
@@ -10,6 +10,6 @@
 <ion-content padding>
   <ion-button (click)="onGoToPoissons()">Poissons</ion-button>
   <ion-button (click)="onGoToCrustaces()">Crustaces</ion-button>
-  <ion-button (click)="onGoToCoquilllages()">Coquillage</ion-button>
+  <ion-button (click)="onGoToCoquilllages()">Coquillages</ion-button>
   <ion-button (click)="onGoToPromotion()">Promotion</ion-button>
 </ion-content>
