--- a/src/app/crustaces/crustaces.page.html
+++ b/src/app/crustaces/crustaces.page.html
@@ -9,7 +9,6 @@
 
 <ion-content>
   <ion-list>
-      
     <ng-container *ngFor="let produit of produitsList">
       <ion-item *ngIf='produit.category === 2'>
       <ion-label>
@@ -17,11 +16,10 @@
       </ion-label>
       <ion-label slot="end">
         {{produit.price}} €
+        <ion-button (click)="saveToPanier(produit.id, produit)">Add</ion-button>
       </ion-label>
       </ion-item>
     </ng-container>
-      
-    
   </ion-list>
-
+  <ion-button (click)="goToPanier()">Panier</ion-button>
 </ion-content>
