--- a/src/app/panier/panier.page.html
+++ b/src/app/panier/panier.page.html
@@ -19,5 +19,8 @@
         </ion-label>
     </ion-item>
   </ion-list>
-
 </ion-content>
+
+<ion-footer>
+  <ion-button>Valider Panier</ion-button>
+</ion-footer>
