--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -10,9 +10,14 @@
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #3171e0;
   --ion-color-primary-tint: #4c8dff;
+  --ion-toolbar-background: #264653;
+  --ion-toolbar-text:white;
+  --ion-back-button: white;
+  --ion-content-background: grey;
 
   .title_page{
     text-align: center;
+    color: white;
   }
   .goRight{
     text-align: right;
