--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -19,18 +19,18 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-button  (click)="onGoToProd_Prom()">Produits et promotions</ion-button>
+        <ion-button expand="block" (click)="onGoToProd_Prom()">Produits et promotions</ion-button>
       </ion-col>
       <ion-col>
-        <ion-button (click)="onGoToBateaux()">Bateaux</ion-button>
+        <ion-button expand="block" (click)="onGoToBateaux()">Bateaux</ion-button>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-button (click)="onGoToRestaurants()">Restaurants</ion-button>
+        <ion-button expand="block" (click)="onGoToRestaurants()">Restaurants</ion-button>
       </ion-col>
       <ion-col>
-        <ion-button (click)="onGoToRecettes()">Recettes</ion-button>
+        <ion-button expand="block" (click)="onGoToRecettes()">Recettes</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
