--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -215,7 +215,7 @@
     --ion-background-color: #c6dabf;
     --ion-background-color-rgb: 18,18,18;
 
-    --ion-text-color: #ffffff;
+    --ion-text-color: #080808;
     --ion-text-color-rgb: 255,255,255;
 
     --ion-border-color: #222222;
