--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,1 +1,1 @@
-<ion-button (click)="validerPanier()">Valider Panier</ion-button>
+<ion-button expand="full" color="warning" (click)="validerPanier()">Valider Panier</ion-button>
