--- a/src/app/single-restaurant/single-restaurant.page.html
+++ b/src/app/single-restaurant/single-restaurant.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header class="title_page">
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
