--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,1 +1,4 @@
-<ion-button expand="full" color="warning" (click)="validerPanier()">Valider Panier</ion-button>
+<ion-button expand="full" color="warning" (click)="validerPanier()">
+  <ion-icon name="bag-check-outline" slot="start"></ion-icon>
+  Valider Panier
+</ion-button>
