--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -23,7 +23,14 @@
     text-align: right;
   }
 
+  .text{
+    color: #264653;
+  }
 
+  .title {
+    text-align: center;
+    color: #264653;
+  }
 
 
 
