--- a/src/app/coquillages/coquillages.page.html
+++ b/src/app/coquillages/coquillages.page.html
@@ -22,8 +22,8 @@
       </ion-item>
     </ng-container>
   </ion-list>
-  <ion-button expand="full" color="secondary"  (click)="goToPanier()">
-    <ion-icon name="bag-outline"></ion-icon>
+  <ion-button expand="full" color="warning"  (click)="goToPanier()">
+    <ion-icon name="bag-outline" slot="start"></ion-icon>
     <p>   Panier</p>
   </ion-button>
 </ion-content>
