--- a/src/app/single-restaurant/single-restaurant.page.html
+++ b/src/app/single-restaurant/single-restaurant.page.html
@@ -1,5 +1,5 @@
-<ion-header class="title_page">
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar class="title_page">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
