--- a/src/app/prod-prom/prod-prom.page.html
+++ b/src/app/prod-prom/prod-prom.page.html
@@ -10,19 +10,19 @@
 <ion-content padding>
   <h5 class="title">Voici une sélection de plusieurs produits</h5>
   <ion-list>
-    <ion-button expand="full"  (click)="onGoToPoissons()">
+    <ion-button expand="full"  (click)="onGoToPoissons()" color="secondary">
       <ion-icon name="fish-outline" slot="start"></ion-icon>
       Poissons
     </ion-button>
-    <ion-button (click)="onGoToCrustaces()">
+    <ion-button (click)="onGoToCrustaces()" color="secondary">
       <ion-icon name="arrow-forward-circle-outline" slot="end"></ion-icon>
       Crustaces
     </ion-button>
-    <ion-button (click)="onGoToCoquilllages()">
+    <ion-button (click)="onGoToCoquilllages()" color="secondary">
       <ion-icon name="arrow-forward-circle-outline" slot="end"></ion-icon>
       Coquillages
     </ion-button>
-    <ion-button expand="full" (click)="onGoToPromotion()">
+    <ion-button expand="full" (click)="onGoToPromotion()" color="secondary">
       <ion-icon name="pricetag-outline" slot="start"></ion-icon>
       Promotion
     </ion-button>
