--- a/src/app/panier/panier.page.html
+++ b/src/app/panier/panier.page.html
@@ -22,6 +22,6 @@
   </ion-list>
 </ion-content>
 
-<ion-footer *ngIf="produits.length != 0">
+<ion-footer *ngIf="!vide">
   <app-settings></app-settings>
 </ion-footer>
