--- a/src/app/bateaux/bateaux.page.html
+++ b/src/app/bateaux/bateaux.page.html
@@ -19,7 +19,7 @@
       <ion-avatar>
         <img [src]="bateau.icon">
       </ion-avatar>
-      <ion-button color="warning">
+      <ion-button color="warning" expand="block">
         <ion-label>
           {{ bateau.name }}
         </ion-label>
