--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -16,7 +16,19 @@
       <button type="button" (click)="goToFb('https://www.facebook.com/lebateaudethibault')"><ion-icon name="logo-facebook" ></ion-icon></button>
     </ion-row>
   </ion-grid>
-  
-  
-  
+
+  <ion-item>
+    <ion-label position="floating">Nom et Prénom</ion-label>
+    <ion-input></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label position="floating">Email</ion-label>
+    <ion-input placeholder="Email"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label position="floating">Message</ion-label>
+    <ion-textarea placeholder="Ecrivez votre message"></ion-textarea>
+  </ion-item>
 </ion-content>
