--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -18,17 +18,17 @@
   </ion-grid>
 
   <ion-item>
-    <ion-label position="floating">Nom et Prénom</ion-label>
+    <ion-label position="floating" class="white">Nom et Prénom</ion-label>
     <ion-input></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating">Email</ion-label>
+    <ion-label position="floating" class="white">Email</ion-label>
     <ion-input placeholder="Email"></ion-input>
   </ion-item>
 
   <ion-item>
-    <ion-label position="floating">Message</ion-label>
+    <ion-label position="floating" class="white">Message</ion-label>
     <ion-textarea placeholder="Ecrivez votre message"></ion-textarea>
   </ion-item>
 </ion-content>
