--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -33,13 +33,13 @@
 </ion-content>
 <ion-footer>
     <ion-row>
-      <ion-col (click)="onGoToContact()">
+      <ion-col (click)="onGoToContact()" class="text">
         <ion-icon name="reader-outline"></ion-icon>
-        <ion-text class="text">  Contact</ion-text>
+        <ion-text>  Contact</ion-text>
       </ion-col>
-      <ion-col class="goRight">
+      <ion-col class="goRight" class="text">
         <ion-icon name="call-outline"> </ion-icon>
-        <ion-text class="text"> 06 63 99 99 78</ion-text>
+        <ion-text> 06 63 99 99 78</ion-text>
       </ion-col>
     </ion-row>
 </ion-footer>
