--- a/src/app/panier/panier.page.html
+++ b/src/app/panier/panier.page.html
@@ -10,7 +10,7 @@
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let produit of produits">
-        <ion-label>
+        <ion-label class="white">
           {{ produit.name }} - {{produit.price}} €
         </ion-label>
         <ion-label slot="end">
