--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -32,6 +32,9 @@
     color: #264653;
   }
 
+  .white {
+    color: white;
+  }
 
 
   /** secondary **/
@@ -224,14 +227,15 @@
   }
   
   .md body {
-    --ion-background-color: #c6dabf;
+    
+    --ion-background-color: white;
     --ion-background-color-rgb: 18,18,18;
-
+    
     --ion-text-color: #080808;
     --ion-text-color-rgb: 255,255,255;
 
     --ion-border-color: #222222;
-
+    
     --ion-color-step-50: #1e1e1e;
     --ion-color-step-100: #2a2a2a;
     --ion-color-step-150: #363636;
