Changement de couleur contact et numéro dans home

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -15,6 +15,14 @@
   --ion-back-button: white;
   --ion-content-background: grey;
 
+  #col_contact{
+    background-color: rgb(243, 161, 9);
+  }
+  
+  #col_num{
+    background-color: rgb(13, 241, 6);
+  }
+
   .title_page{
     text-align: center;
     color: white;
