--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -33,11 +33,11 @@
 </ion-content>
 <ion-footer>
     <ion-row>
-      <ion-col (click)="onGoToContact()" class="text">
+      <ion-col id="col_contact" (click)="onGoToContact()" class="text">
         <ion-icon name="reader-outline"></ion-icon>
         <ion-text>  Contact</ion-text>
       </ion-col>
-      <ion-col class="goRight" class="text">
+      <ion-col id="col_num" class="goRight" class="text">
         <ion-icon name="call-outline"> </ion-icon>
         <ion-text> 06 63 99 99 78</ion-text>
       </ion-col>
