--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,18 +15,18 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-button expand="block" (click)="onGoToProd_Prom()" color="secondary">Produits et promotions</ion-button>
+        <ion-button expand="block" (click)="onGoToProd_Prom()" color="warning">Produits et promotions</ion-button>
       </ion-col>
       <ion-col>
-        <ion-button expand="block" (click)="onGoToBateaux()" color="secondary">Bateaux</ion-button>
+        <ion-button expand="block" (click)="onGoToBateaux()" color="warning">Bateaux</ion-button>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-button expand="block" (click)="onGoToRestaurants()" color="secondary">Restaurants</ion-button>
+        <ion-button expand="block" (click)="onGoToRestaurants()" color="warning">Restaurants</ion-button>
       </ion-col>
       <ion-col>
-        <ion-button expand="block" (click)="onGoToRecettes()" color="secondary">Recettes</ion-button>
+        <ion-button expand="block" (click)="onGoToRecettes()" color="warning">Recettes</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
