--- a/src/app/prod-prom/prod-prom.page.html
+++ b/src/app/prod-prom/prod-prom.page.html
@@ -8,21 +8,28 @@
 </ion-header>
 
 <ion-content padding>
+  <br>
+  <br>
   <h5 class="title">Voici une sélection de plusieurs produits</h5>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <ion-list>
-    <ion-button expand="full"  (click)="onGoToPoissons()" color="secondary">
+    <ion-button expand="full"  (click)="onGoToPoissons()" color="warning">
       <ion-icon name="fish-outline" slot="start"></ion-icon>
       Poissons
     </ion-button>
-    <ion-button (click)="onGoToCrustaces()" color="secondary">
+    <ion-button (click)="onGoToCrustaces()" color="warning">
       <ion-icon name="arrow-forward-circle-outline" slot="end"></ion-icon>
       Crustaces
     </ion-button>
-    <ion-button (click)="onGoToCoquilllages()" color="secondary">
+    <ion-button (click)="onGoToCoquilllages()" color="warning">
       <ion-icon name="arrow-forward-circle-outline" slot="end"></ion-icon>
       Coquillages
     </ion-button>
-    <ion-button expand="full" (click)="onGoToPromotion()" color="secondary">
+    <ion-button expand="full" (click)="onGoToPromotion()" color="warning">
       <ion-icon name="pricetag-outline" slot="start"></ion-icon>
       Promotion
     </ion-button>
